--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <meta property="og:image" content="https://via.placeholder.com/1200x630/667eea/ffffff?text=Daily+Planner">
     <meta name="twitter:card" content="summary_large_image">
     <!-- 🔥 END VIRAL TAGS 🔥 -->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TK1Z966LR0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TK1Z966LR0');
+</script>
     
     <style>
         :root {
@@ -633,5 +642,6 @@
     </script>
 </body>
 </html>
+
 
 
